force-app/main/default/objects/Score_Summary__c/Score_Summary__c.object-meta.xml
<CustomObject>
    <description>This object collects individual Scorer Summaries and Details</description>
    <label>Score Summary</label>
    <nameField>
        <displayFormat>SS-{0}</displayFormat>
        <label>Score Summary Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Score Summaries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>