force-app/main/default/objects/Score_Summary__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to Acount (may be redirected)</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Score Summaries</relationshipLabel>
    <relationshipName>Score_Summaries</relationshipName>
    <type>Lookup</type>
</CustomField>