force-app/main/default/objects/Score_Summary__c/fields/Application__c.field-meta.xml
<CustomField>
    <fullName>Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Application</label>
    <referenceTo>Application__c</referenceTo>
    <relationshipLabel>Score Summaries</relationshipLabel>
    <relationshipName>Score_Summaries</relationshipName>
    <type>Lookup</type>
</CustomField>