force-app/main/default/objects/Score_Summary__c/fields/Application_Display_Name__c.field-meta.xml
<CustomField>
    <fullName>Application_Display_Name__c</fullName>
    <formula>Application__r.Application_Display_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Application Display Name</label>
    <type>Text</type>
</CustomField>