force-app/main/default/objects/Score_Summary__c/fields/Average__c.field-meta.xml
<CustomField>
    <fullName>Average__c</fullName>
    <formula>Total_Points_Awarded__c /  Total_Raters__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Average</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>