force-app/main/default/objects/Score_Summary__c/fields/Scorers_Completed__c.field-meta.xml
<CustomField>
    <fullName>Scorers_Completed__c</fullName>
    <label>Scorers Completed</label>
    <summaryFilterItems>
        <field>Scorer_Summary__c.Status__c</field>
        <operation>equals</operation>
        <value>Complete</value>
    </summaryFilterItems>
    <summaryForeignKey>Scorer_Summary__c.Score_Summary__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>