force-app/main/default/objects/Score_Summary__c/fields/Status_frm__c.field-meta.xml
<CustomField>
    <fullName>Status_frm__c</fullName>
    <formula>If(Scorers_Completed__c =  Total_Raters__c , &quot;Complete&quot;, &quot;Pending&quot;)</formula>
    <label>Status</label>
    <type>Text</type>
</CustomField>