force-app/main/default/objects/Score_Summary__c/fields/Total_Points_Awarded__c.field-meta.xml
<CustomField>
    <fullName>Total_Points_Awarded__c</fullName>
    <label>Total Points Awarded</label>
    <summarizedField>Scorer_Summary__c.Points_Awarded__c</summarizedField>
    <summaryFilterItems>
        <field>Scorer_Summary__c.Status__c</field>
        <operation>equals</operation>
        <value>Complete</value>
    </summaryFilterItems>
    <summaryForeignKey>Scorer_Summary__c.Score_Summary__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>