force-app/main/default/objects/Score_Summary__c/fields/Total_Points_Awarded_frm__c.field-meta.xml
<CustomField>
    <fullName>Total_Points_Awarded_frm__c</fullName>
    <formula>IF(Status_frm__c = &quot;Complete&quot;, Total_Points_Awarded__c, null)</formula>
    <label>Total Points Awarded</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>