force-app/main/default/objects/Score_Summary__c/fields/Total_Points_Possible__c.field-meta.xml
<CustomField>
    <fullName>Total_Points_Possible__c</fullName>
    <label>Total Points Possible</label>
    <summarizedField>Scorer_Summary__c.Max_Points__c</summarizedField>
    <summaryForeignKey>Scorer_Summary__c.Score_Summary__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>