force-app/main/default/objects/Score_Summary__c/fields/Total_Raters__c.field-meta.xml
<CustomField>
    <fullName>Total_Raters__c</fullName>
    <label>Total Raters</label>
    <summaryForeignKey>Scorer_Summary__c.Score_Summary__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>