force-app/main/default/objects/Score_Summary__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Application__c</columns>
    <columns>Status_frm__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>